<resources>
    <string name="app_name">Android_Application</string>
    <string name="todo">TODO</string>
    <string name="hello">Hello!</string>
    <string name="start">START</string>
    <string name="button2">GAME</string>
    <string name="button3">PLAY AGAIN</string>
    <string name="button4">START</string>
    <string name="button5">PAUSE</string>
    <string name="button6">STOP</string>
    <string name="button7">SEARCH</string>
    <string name="button8">TAX</string>
    <string name="calculate">CALCULATE PRICE</string>
    <string name="Gamedemo">GAMEDEMO</string>
    <string name="Diamond">You found the diamond!</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Location</string>
    <string name="title_notifications">Timer</string>
    <string name="timer_default_text">Done!</string>
    <string name="Score">Score:</string>
    <string name="search"></string>
    <string name="Hscore">Top Score:</string>
    <string name="Highscore"></string>
    <string name="Gamescore"></string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Address">Address</string>
    <string name="Location">Show on map</string>
    <string name="Yourlocation">Your location</string>

</resources>