<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="381dp"
        android:layout_height="75dp"
        android:text="@string/Yourlocation"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Latitude"
        android:text="@string/Latitude">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textFieldLatitudeField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Longitude"
        android:text="@string/Longitude">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldLongitudeField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColorHint="#616161"
            tools:ignore="VisualLintTextFieldSize" />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldAddressField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Address"
        android:text="@string/Address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textColorHint="#616161"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Location" />

</LinearLayout>
