<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/Highscore"
        android:layout_width="131dp"
        android:layout_height="39dp"
        android:text="@string/Highscore"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Gamedemo"
        app:layout_constraintVertical_bias="0.03"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/gamescore"
        android:layout_width="131dp"
        android:layout_height="39dp"
        android:text="@string/Gamescore"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Gamedemo"
        app:layout_constraintVertical_bias="0.967"
        tools:ignore="MissingConstraints,VisualLintOverlap" />

    <TextView
        android:id="@+id/Gamedemo"
        android:layout_width="223dp"
        android:layout_height="57dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/Gamedemo"
        android:textColor="#263238"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        tools:ignore="MissingConstraints,UnusedAttribute" />

    <TextView
        android:id="@+id/Diamond"
        android:layout_width="223dp"
        android:layout_height="57dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/Diamond"
        android:textColor="#263238"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.144"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/Score"
        android:layout_width="137dp"
        android:layout_height="39dp"
        android:layout_marginBottom="12dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/Score"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994"
        tools:ignore="UnusedAttribute" />

    <ImageButton
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:contentDescription="TODO"
        android:src="@drawable/my_image"
        android:background="@null"
        tools:ignore="ContentDescription,HardcodedText"
        tools:layout_editor_absoluteX="306dp"
        tools:layout_editor_absoluteY="731dp" />

    <ImageButton
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/my_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/my_image"
        app:layout_constraintBottom_toTopOf="@+id/flow2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="53dp" />

    <ImageButton
        android:id="@+id/imageView4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="72dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/my_image"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteY="160dp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow2"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:paddingTop="16dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="imageView4,imageView2,imageView3,imageView"
        app:flow_maxElementsWrap="2"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <!--    <Button-->
    <!--        android:id="@+id/button3"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/button3"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/imageView" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="string/restart"
        android:scaleType="fitCenter"
        android:src="@drawable/redo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText,ImageContrastCheck" />

    <TextView
        android:id="@+id/Gamescore"
        android:layout_width="131dp"
        android:layout_height="39dp"
        android:text="@string/Gamescore"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Gamedemo"
        app:layout_constraintVertical_bias="0.967"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Hscore"
        android:layout_width="148dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/Hscore"
        android:textColor="#263238"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156"
        tools:ignore="UnusedAttribute" />


</androidx.constraintlayout.widget.ConstraintLayout>